force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__AncestorId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AncestorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ancestor category</description>
    <label>Ancestor</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>