force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__ExpandedByDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpandedByDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the category will be expanded to one level by default.</description>
    <inlineHelpText>When checked this category will be expanded to one level by default. The parent category should also be marked as expanded by default.</inlineHelpText>
    <label>Expanded By Default</label>
    <type>Checkbox</type>
</CustomField>