force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__IsLeaf__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsLeaf__c</fullName>
    <description>Indicates whether the category is a leaf category</description>
    <formula>IF( (Apttus_Config2__Right__c = (Apttus_Config2__Left__c + 1)), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the category is a leaf category</inlineHelpText>
    <label>Is Leaf</label>
    <type>Text</type>
</CustomField>