force-app/main/default/objects/Apttus_Config2__ClassificationHierarchy__c/fields/Apttus_Config2__ProductCount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCount__c</fullName>
    <description>The number of products associated with the classification</description>
    <label>Product Count</label>
    <summaryForeignKey>Apttus_Config2__ProductClassification__c.Apttus_Config2__ClassificationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>